spec/error_multichars.kex
main do
  IO.printLine("this has to work")
  IO.printLine('this is wrong (chars)')
end